--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h3>Pipe-lines</h3>
+    <p>UPDATE:3</p>
     <img src="img/PF.jpg" height="200px" width="200px">
 </body>
 </html>
