--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>Pipe-lines</h3>
+    <h3>Pipe-lines submit</h3>
     <img src="../img/PF.jpg" height="200px" width="200px">
 </body>
 </html>
